--- a/src/apps/copo_barcoding_submission/templates/copo/copo_tagged_seq.html
+++ b/src/apps/copo_barcoding_submission/templates/copo/copo_tagged_seq.html
@@ -4,6 +4,8 @@
 {% load web_tags %}
 {% load html_tags %}
 
+{% block title %} Barcoding Manifest {% endblock %}
+
 {% block stylesheet_block %}
 
 <style>
@@ -18,7 +20,7 @@
 {% endblock %}
 
 
-{% block title_block %} COPO Tagged Sequence {% endblock %}
+{% block title_block %} Barcoding Manifest {% endblock %}
 
 {% block tagline_block %}
 
