--- a/src/apps/copo_barcoding_submission/templates/copo/copo_tagged_seq.html
+++ b/src/apps/copo_barcoding_submission/templates/copo/copo_tagged_seq.html
@@ -15,6 +15,9 @@
     .highlight_no_accession {
         background-color: #FFD700 !important;
     }
+    .highlight_error_file_processing_status {
+            background-color: #f88080!important;
+        }          
 </style>  
 
 {% endblock %}
