--- a/src/apps/copo_seq_annotation_submission/templates/copo/copo_seq_annotation.html
+++ b/src/apps/copo_seq_annotation_submission/templates/copo/copo_seq_annotation.html
@@ -36,6 +36,7 @@
         <!-- hidden attributes  -->
         <input type="hidden" id="profile_title" value="{{ profile.title }}"/>
         <input type="hidden" id="profile_type" value="{{ profile.type }}" />
+        <input type="hidden" id="profile_id" value="{{ profile_id }}" />
         <input type="hidden" id="nav_component_name" value="seqannotation"/>
     </div>
 
