--- a/src/apps/copo_seq_annotation_submission/templates/copo/copo_seq_annotation.html
+++ b/src/apps/copo_seq_annotation_submission/templates/copo/copo_seq_annotation.html
@@ -89,20 +89,22 @@
              style="display: none;">
             <div class="copo-webui-popover">
                 <div class="webui-popover-inner">
-                    <h3 class="copo-webui-popover-title">Sequence Annotations - Getting started</h3>
+                    <h3 class="copo-webui-popover-title">Getting started</h3>
                     <div class="copo-webui-popover-content">
                         <div class="webpop-content-div">
-                            The sequence annotation's page provides a platform to marking specific features
-                            in a Deoxyribonucleic acid (DNA), Ribonucleic acid (RNA) or protein sequence with
-                            descriptive information about structure or function. It is usally performed after
+                            This page relates to the <strong>Sequence Annotations</strong> component 
+                            (<i id="componentIcon" class="ui icon" aria-hidden="true"></i>) of a profile.
+                            Sequence annotations involve marking specific features
+                            in a <span class="hover-text" title="Deoxyribonucleic acid">DNA</span>, 
+                            <span class="hover-text" title="Ribonucleic acid">RNA</span> or protein sequence with
+                            descriptive information about structure or function. It is usually performed after
                             a genome is sequenced and assembled.
-                            <br/><br/>
-                            <div>To add annotations, click the
-                                <button class="circular tiny ui icon primary button">
-                                    <i class="icon table add"></i>
-                                </button>
-                                icon.
-                            </div>
+                            <br><br>
+                            <b>To add annotations</b>: click the
+                            <button class="circular tiny ui icon primary button no-click">
+                                <i class="icon table add"></i>
+                            </button>
+                            icon above.
                         </div>
                     </div>
                 </div>
