--- a/src/apps/copo_barcoding_submission/templates/copo/copo_tagged_seq.html
+++ b/src/apps/copo_barcoding_submission/templates/copo/copo_tagged_seq.html
@@ -42,7 +42,7 @@
         {% for checklist in checklists %}
             <input type="hidden" id="blank_manifest_url_{{checklist.primary_id}}" value="{{ checklist.primary_id  | get_blank_manifest_url  }}"/>  }}"
         {% endfor %}
-        <input type="hidden" id="component_subtitle" value="<select id='checklist_id' name='checklists'>{% for checklist in checklists %}<option value='{{ checklist.primary_id }}' title='{{checklist.description}}' >{{ checklist.primary_id }} : {{ checklist.name }}</option>{% endfor %}</select> "/>
+        <input type="hidden" id="component_subtitle" value="<select id='checklist_id' name='checklists'>{% for checklist in checklists %}<option value='{{ checklist.primary_id }}' title='{{checklist.description}}' >{{ checklist.primary_id }}: {{ checklist.name }}</option>{% endfor %}</select> "/>
     </div>
 
 {% endblock %}
@@ -54,7 +54,7 @@
         <label for="checklist_id">Select a checklist</label>
         <select id="checklist_id" name="checklists">
             {% for checklist in checklists %}
-                <option value="{{ checklist.primary_id }}" title="{{checklist.description}}" >{{ checklist.primary_id }} : {{ checklist.name }}</option>
+                <option value="{{ checklist.primary_id }}" title="{{checklist.description}}" >{{ checklist.primary_id }}: {{ checklist.name }}</option>
             {% endfor %}
         </select>
     </div-->
@@ -104,29 +104,38 @@
         <div class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-0 page-welcome-message" style="display: none;">
             <div class="copo-webui-popover">
                 <div class="webui-popover-inner">
-                    <h3 class="copo-webui-popover-title">Barcoding Manifest - Getting started</h3>
+                    <h3 class="copo-webui-popover-title">Getting started</h3>
                     <div class="copo-webui-popover-content">
                         <div class="webpop-content-div">
-                            The <strong>Barcode Manifest</strong> component of a profile 
-                            <br/><br/>
-                            Select the desired checklist from the dropdown menu then, click the
-                            <button class="circular tiny ui icon brown  button">
-                                <i class="icon download sign"></i>
-                            </button>
-                            button to download the blank manifest.  
-                            <br /><br />
-                            After having completed the manifest, click the
-                            <button id="help_add_button" class="circular tiny ui icon button">
-                                <i class="icon table sign"></i>
-                            </button>
-                            button to upload the manifest. 
-                            <!--div><strong>Quick Tour: </strong>To explore the various
-                                controls available on this page, click the
-                                <button class="circular tiny ui icon orange button">
+                            This page relates to the <strong>Barcoding manifest</strong> component 
+                            (<i id="componentIcon" class="ui icon" aria-hidden="true"></i>) of a profile. 
+                            Barcoding manifests (also known as <span style="font-style: italic;">targeted sequences</span>) 
+                            are assembled and annotated sequences representing interesting features or gene regions.
+                            <br><br>
+                            <div>
+                                <strong>Download blank manifest</strong>: Select the desired checklist from 
+                                the dropdown menu above then, click the
+                                <button class="circular tiny ui icon brown button no-click">
+                                    <i class="icon download sign"></i>
+                                </button>
+                                button next to it to download a blank manifest.
+                            </div>
+                            <br>
+                            <div>
+                                <strong>Upload completed manifest</strong>: After having completed the manifest, 
+                                choose the matching checklist option from the dropdown menu then, click the
+                                <button id="help_add_button" class="circular tiny ui icon button no-click">
+                                    <i class="icon table sign"></i>
+                                </button>
+                                button to upload it.
+                            </div>
+                            <!--<div>
+                                <strong>Quick tour</strong>: To explore various controls on this page, click the
+                                <button class="circular tiny ui icon orange button no-click">
                                     <i class="icon lightbulb"></i>
                                 </button>
                                 icon.
-                            </div-->
+                            </div>-->
                         </div>
                     </div>
                 </div>
