--- a/src/apps/copo_barcoding_submission/templates/copo/copo_tagged_seq.html
+++ b/src/apps/copo_barcoding_submission/templates/copo/copo_tagged_seq.html
@@ -42,7 +42,7 @@
         {% for checklist in checklists %}
             <input type="hidden" id="blank_manifest_url_{{checklist.primary_id}}" value="{{ checklist.primary_id  | get_blank_manifest_url  }}"/>  }}"
         {% endfor %}
-        <input type="hidden" id="component_subtitle" value="<select id='checklist_id' name='checklists'>{% for checklist in checklists %}<option value='{{ checklist.primary_id }}' title='{{checklist.description}}' >{{ checklist.primary_id }}: {{ checklist.name }}</option>{% endfor %}</select> "/>
+        <input type="hidden" id="component_subtitle" value="<select id='checklist_id' class='searchable-select' name='checklists'>{% for checklist in checklists %}<option value='{{ checklist.primary_id }}' title='{{checklist.description}}' >{{ checklist.primary_id }}: {{ checklist.name }}</option>{% endfor %}</select> "/>
     </div>
 
 {% endblock %}
