--- a/src/apps/copo_barcoding_submission/templates/copo/copo_tagged_seq.html
+++ b/src/apps/copo_barcoding_submission/templates/copo/copo_tagged_seq.html
@@ -101,7 +101,7 @@
 
     <!-- getting started section -->
     <div class="row">
-        <div class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-0 page-welcome-message" style="display: none;">
+        <div class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-0 page-welcome-message" style="display: none;" data-tour-id="getting_started">
             <div class="copo-webui-popover">
                 <div class="webui-popover-inner">
                     <h3 class="copo-webui-popover-title">Getting started</h3>
@@ -114,11 +114,11 @@
                             <br><br>
                             <div>
                                 <strong>Download blank manifest</strong>: Select the desired checklist from 
-                                the dropdown menu above then, click the
+                                the dropdown menu above then, click 
                                 <button class="circular tiny ui icon brown button no-click">
                                     <i class="icon download sign"></i>
                                 </button>
-                                button next to it to download a blank manifest.
+                                next to it to download a blank manifest.
                             </div>
                             <br>
                             <div>
