--- a/src/apps/copo_seq_annotation_submission/templates/copo/copo_seq_annotation.html
+++ b/src/apps/copo_seq_annotation_submission/templates/copo/copo_seq_annotation.html
@@ -86,25 +86,45 @@
     <!-- getting started section -->
     <div class="row">
         <div class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-0 page-welcome-message"
-             style="display: none;">
+             style="display: none;" data-tour-id="getting_started">
             <div class="copo-webui-popover">
                 <div class="webui-popover-inner">
                     <h3 class="copo-webui-popover-title">Getting started</h3>
                     <div class="copo-webui-popover-content">
                         <div class="webpop-content-div">
-                            This page relates to the <strong>Sequence Annotations</strong> component 
-                            (<i id="componentIcon" class="ui icon" aria-hidden="true"></i>) of a profile.
-                            Sequence annotations involve marking specific features
-                            in a <span class="hover-text" title="Deoxyribonucleic acid">DNA</span>, 
-                            <span class="hover-text" title="Ribonucleic acid">RNA</span> or protein sequence with
-                            descriptive information about structure or function. It is usually performed after
-                            a genome is sequenced and assembled.
-                            <br><br>
-                            <b>To add annotations</b>: click the
-                            <button class="circular tiny ui icon primary button no-click">
-                                <i class="icon table add"></i>
-                            </button>
-                            icon above.
+                            <p>
+                                This page relates to the <strong>Sequence Annotations</strong> component 
+                                (<i id="componentIcon" class="ui icon" aria-hidden="true"></i>) of a profile.
+                                Sequence annotations involve marking specific features
+                                in a <span class="hover-text" title="Deoxyribonucleic acid">DNA</span>, 
+                                <span class="hover-text" title="Ribonucleic acid">RNA</span> or protein sequence with
+                                descriptive information about structure or function. It is usually performed after
+                                a genome is sequenced and assembled.
+                            </p>
+                            <br>
+                            <p>
+                                <strong>Step 1</strong>: <strong class="text-underline">Upload prerequisite data</strong>: Before adding annotations,  
+                                upload the following data using the icons in the navigation pane (top right):
+                                <ul>
+                                    <li><i class="ui icon blue file"></i> — for annotation <strong>data files</strong></li>
+                                    <li><i class="ui icon olive filter"></i> — for <strong>samples</strong></li>
+                                    <li><i class="ui icon orange dna"></i> — for <strong>reads</strong></li></ul>
+                                </ul>
+                            </p>
+                            <br>
+                            <p>
+                                <strong>Step 2</strong>: <strong class="text-underline">Add annotations</strong>:
+                                Click <button class="circular tiny ui icon primary button no-click">
+                                    <i class="icon table add"></i>
+                                </button> above to open a form to add annotations.
+                            </p>
+                            <br>
+                            <p>
+                                <strong>Quick tour</strong>: To explore various controls on this page, click 
+                                <button class="circular tiny ui icon orange button no-click">
+                                    <i class="icon lightbulb"></i>
+                                </button> above.
+                            </p>
                         </div>
                     </div>
                 </div>
